:lipstick: Fix Spacing Between Buttons

--- a/src/modules/dynamic-ui-wrapper/dynamic-ui-wrapper.scss
+++ b/src/modules/dynamic-ui-wrapper/dynamic-ui-wrapper.scss
@@ -1,3 +1,3 @@
 .dynamic-ui__button--decline {
-  margin-left: 1px;
+  margin-left: -1px;
 }
